# yourfinanceworks

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-AGPLv3.txt  LICENSE-COMMERCIAL.txt  LICENSE-GPLv3.txt  README.md  SECURITY.md  SUPPORT.md  TESTING.md  TODO_HELP_CENTER.md  docker-compose-quay.yml  docker-compose-sqlite.yml  docker-compose.yml  finace_app_landing  license_server  run-tests.sh
.github/: image-digest-lock.json
api/: .coverage  .env.cloud-storage.example  .env.example.full  .env.slack  Dockerfile  README.md  auth.py  config.py  db_init.py  encryption_config.py  env.postgresql.example  invoice_app.db  launch_mcp.py  main.py  pytest.ini  requirements-sqlite.txt  requirements-test.txt  requirements.txt  run-tests.sh  run_comprehensive_tests.py  setup.py  slack_app_manifest.json  slack_app_manifest_fixed.json  start.py  test_expense_persistence.py
cli/: README.md  __init__.py  setup.py
docker/: nginx.conf
docs/: AI_CHAT_HISTORY_PERSISTENCE.md  AZURE_AD_TESTING_GUIDE.md  BANK_STATEMENT_LLM_VENDOR_SUPPORT.md  BARCODE_IMPLEMENTATION_SUMMARY.md  BARCODE_SCANNING_IMPLEMENTATION.md  BRAND_GUIDELINES.md  CLOUD_STORAGE_DEPLOYMENT_GUIDE.md  CLOUD_STORAGE_FOLDER_DELETION.md  CLOUD_STORAGE_SCRIPTS_REFERENCE.md  DECORATOR_AUDIT_REPORT.md  (+32 more)
mfa-chain-orchestrator/: README.md  TEST_PROCESS.md  pyproject.toml  requirements.txt
mfa-chain-orchestrator/examples/: fastapi_test_app.py  ui.html
mfa-chain-orchestrator/src/mfa_chain_orchestrator/: __init__.py  exceptions.py  models.py  orchestrator.py
(+2077 files in other folders)
