[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfa-chain-orchestrator"
version = "0.1.0"
description = "Production-grade MFA orchestration library with policy-driven factor chaining"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyotp>=2.9.0,<3.0.0",
  "pydantic>=2.0.0,<3.0.0",
]
authors = [
  { name = "Security Engineering" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
